Connection "enrichment"
Signed-off-by: Andrey Balarev <andrey.balarev@bosch.io>